<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <com.example.courierversion.view.TopBar
       android:id="@+id/topBar"
       android:layout_width="match_parent"
       android:layout_height="?attr/actionBarSize"
       app:title="@string/info_change"
       app:isRightShow="false"
       />


    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topBar"
        android:layout_margin="10dp"
        android:background="@drawable/pop_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                style="@style/textInfoStyle"
                android:text="@string/name"/>

            <EditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:imeOptions="actionNext"
                android:hint="@string/input_name"
                android:shadowDx="0.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                android:textColorHint="#ffdddddd"
                android:background="#00000000"
                android:layout_height="50dp" />

            <ImageButton
                android:id="@+id/delete_1"
                android:layout_width="30dp"
                android:background="@drawable/delet_3"
                android:layout_height="30dp"
                android:layout_margin="10dp"/>

        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/base_horization_line" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                style="@style/textInfoStyle"
                android:text="@string/company"/>
            <EditText
                android:id="@+id/et_company"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="50dp"
                android:background="#00000000"
                android:imeOptions="actionNext"
                android:shadowDx="0.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                android:textColorHint="#ffdddddd"
                android:hint="@string/input_company"
                />
            <ImageButton
                android:id="@+id/delete_2"
                android:layout_width="30dp"
                android:background="@drawable/delet_3"
                android:layout_height="30dp"
                android:layout_margin="10dp"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/base_horization_line" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                style="@style/textInfoStyle"
                android:gravity="center_vertical"
                android:text="@string/email"/>
            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="50dp"
                android:background="#00000000"
                android:imeOptions="actionDone"
                android:shadowDx="0.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                android:textColorHint="#ffdddddd"
                android:hint="@string/input_email"
                />
            <ImageButton
                android:id="@+id/delete_3"
                android:layout_width="30dp"
                android:background="@drawable/delet_3"
                android:layout_height="30dp"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_change"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_below="@+id/info"
        android:layout_margin="10dp"
        android:text="@string/modify"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_warm_selector"
        />
</RelativeLayout>