<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.example.courierversion.view.TopBar
        android:id="@+id/topBar"
        app:title="@string/register"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:isRightShow="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tl_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:hintTextAppearance="@style/textInputStyle">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_name"
                android:textColorHint="#708090"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tl_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:hintTextAppearance="@style/textInputStyle">

            <EditText
                android:id="@+id/et_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_company"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textColorHint="#708090"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:hintTextAppearance="@style/textInputStyle">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_email"
                android:textColorHint="#708090"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_warm_selector"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size" />


    </LinearLayout>


</LinearLayout>